# verified-circuits

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  explainer.ipynb  pyproject.toml
certificates/: README.md  check.py  dyck10_exact_seed0.v1.cert.json  dyck10_exact_seed0.v2.cert.json  dyck10_exact_seed0.weights.json  dyck16_exact_seed0.v1.cert.json  dyck16_exact_seed0.v2.cert.json  dyck16_exact_seed0.weights.json
docs/: A2-PLAN.md  B-PLAN.md  FAQ.md  N16-PLAN.md  PROGRESS.md  design.md
experiments/: README.md  build_explainer.py  extract_activations.py  faithfulness.py  probe1_depth.py  probe2_violation.py  probe3_aggregation.py  social_card.py  validate_exact.py
models/: dyck10_exact_seed0.pt  dyck16_exact_seed0.pt
proofs/: README.md  VerifiedCircuits.lean  lake-manifest.json  lakefile.toml
proofs/VerifiedCircuits/: Basic.lean  Circuit.lean  Equiv.lean  Spec.lean
tests/: test_certify.py  test_circuit.py  test_dyck.py  test_model.py
vcirc/: __init__.py  certify.py  circuit.py  dyck.py  exact.py  export_weights.py  model.py  train.py
