[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-circuits"
version = "0.0.1"
description = "Kernel-checkable mechanistic circuits for learned transformers (Spec == Circuit == Model over a complete finite domain)"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vcirc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
